# WG-manager

./: .gitattributes  .gitignore  Makefile  README.md  README_zh.md  config.env  go.mod  go.sum
.github/workflows/: ci.yml
TUI-template/: ARCHITECTURE.md  Cargo.toml
TUI-template/examples/: particles.rs
TUI-template/src/: api.rs  app.rs  background.rs  config.rs  event.rs  main.rs  theme.rs  window.rs
client/: connect.ps1  connect.sh  install-wireguard.sh  request-approval.ps1  request-approval.sh
client/lib/: os-detect.sh
cmd/mgmt-daemon/: main.go
cmd/mgmt-tui/: legacy.go  main.go
cmd/wg-mgmt/: main.go
internal/api/: bootstrap_test.go  deploy_config_test.sh  embed_approval.ps1  embed_approval.sh  embed_connect.sh  handler.go  handler_test.go  middleware.go  qrcode.go  scripts_embed.go  server.go  template.go
scripts/: analyze-logs.sh  build.bat  build.sh  create-peer.sh  health-check.sh  list-peers.sh  test-domain-change.sh
server/: deploy-nginx.sh  deploy-proxy.sh  install-cert.sh  setup-server.sh  update.sh  wg-mgmt.service  wg-tui.wrapper
testdata/: connect.sh  peers.json  run-wsl-test.sh  test-all-fixes.sh  test-api-key-header.sh  test-approval.sh  test-config-reload.sh  test-config.env  test-graceful-shutdown.sh  test-reuse.sh  test-tui.sh
wg-tui/: Cargo.toml  build-linux.sh  install.sh
wg-tui/src/: api.rs  app.rs  config.rs  event.rs  main.rs  theme.rs  window.rs
wg-tui/src/ui/: dashboard.rs  help.rs  invites.rs  logs_view.rs  mod.rs  peers.rs  requests.rs
wg-tui/src/widgets/: card.rs  mod.rs  particles.rs  status_dot.rs  tab_bar.rs
(+21 files in other folders)
