[package]
name = "wg-tui"
version = "0.1.0"
edition = "2021"
description = "A beautiful terminal dashboard for WG-Manager — built with Ratatui"
license = "MIT"

[[bin]]
name = "wg-tui"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.9"
tokio = { version = "1", features = ["full"] }
urlencoding = "2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
